--- a/index.html
+++ b/index.html
@@ -21,199 +21,211 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <ul>
-          <li><a class="nav-link" href="./index.html">WebStudio</a></li>
-          <li>
-            <a class="nav-link" href="">Studio</a>
-          </li>
-          <li>
-            <a class="nav-link" href="">Portfolio</a>
-          </li>
-          <li>
-            <a class="nav-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul>
-          <li>
-            <a class="address-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="address-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav>
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <ul>
+            <li><a class="nav-link" href="./index.html">WebStudio</a></li>
+            <li>
+              <a class="nav-link" href="">Studio</a>
+            </li>
+            <li>
+              <a class="nav-link" href="">Portfolio</a>
+            </li>
+            <li>
+              <a class="nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul>
+            <li>
+              <a class="address-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="address-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!--Section 1-->
       <section class="section-color">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button class="button-title" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button class="button-title" type="button">Order Service</button>
+        </div>
       </section>
       <!--Section 2-->
       <section>
-        <h2>Our benefits</h2>
-        <ul>
-          <li>
-            <h3 class="benefits-title">Strategy</h3>
-            <p class="text-item">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">Punctuality</h3>
-            <p class="text-item">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">Diligence</h3>
-            <p class="text-item">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">Technologies</h3>
-            <p class="text-item">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2>Our benefits</h2>
+          <ul>
+            <li>
+              <h3 class="benefits-title">Strategy</h3>
+              <p class="text-item">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefits-title">Punctuality</h3>
+              <p class="text-item">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefits-title">Diligence</h3>
+              <p class="text-item">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefits-title">Technologies</h3>
+              <p class="text-item">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Section 3-->
       <section class="team-back-color">
-        <h2 class="team-title">Our Team</h2>
-        <ul>
-          <li class="list-back-color">
-            <img
-              src="./images/mark-guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-prof">Product Designer</p>
-          </li>
-          <li class="list-back-color">
-            <img
-              src="./images/tom-ford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-prof">Frontend Developer</p>
-          </li>
-          <li class="list-back-color">
-            <img
-              src="./images/camila-garcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-prof">Marketing</p>
-          </li>
-          <li class="list-back-color">
-            <img
-              src="./images/daniel-wilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-prof">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul>
+            <li class="list-back-color">
+              <img
+                src="./images/mark-guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-prof">Product Designer</p>
+            </li>
+            <li class="list-back-color">
+              <img
+                src="./images/tom-ford.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-prof">Frontend Developer</p>
+            </li>
+            <li class="list-back-color">
+              <img
+                src="./images/camila-garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-prof">Marketing</p>
+            </li>
+            <li class="list-back-color">
+              <img
+                src="./images/daniel-wilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-prof">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section 4 -->
       <section>
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/Portfolio/bank-app.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="service-title">Banking App</h3>
-            <p class="service-item">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/Portfolio/cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="service-title">Cashless Payment</h3>
-            <p class="service-item">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/Portfolio/meditation-app.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="service-title">Meditation App</h3>
-            <p class="service-item">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/Portfolio/taxi-service.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="service-title">Taxi Service</h3>
-            <p class="service-item">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/Portfolio/screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="service-title">Screen Illustrations</h3>
-            <p class="service-item">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/Portfolio/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="service-title">Online Courses</h3>
-            <p class="service-item">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/Portfolio/bank-app.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="service-title">Banking App</h3>
+              <p class="service-item">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/Portfolio/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="service-title">Cashless Payment</h3>
+              <p class="service-item">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/Portfolio/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="service-title">Meditation App</h3>
+              <p class="service-item">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/Portfolio/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="service-title">Taxi Service</h3>
+              <p class="service-item">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/Portfolio/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="service-title">Screen Illustrations</h3>
+              <p class="service-item">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/Portfolio/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="service-title">Online Courses</h3>
+              <p class="service-item">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer-back-color">
-      <a class="logo" href="./index.html"
-        >Web<span class="footer-logo-part">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo" href="./index.html"
+          >Web<span class="footer-logo-part">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
