--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <div class="container">
-        <nav>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="navigation">
           <a class="logo" href="./index.html"
             >Web<span class="logo-part">Studio</span></a
           >
-          <ul>
-            <li><a class="nav-link" href="./index.html">WebStudio</a></li>
+          <ul class="nav-list">
             <li>
               <a class="nav-link" href="">Studio</a>
             </li>
@@ -40,7 +39,7 @@
           </ul>
         </nav>
         <address class="address">
-          <ul>
+          <ul class="address-list">
             <li>
               <a class="address-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
