--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
           >
           <ul class="nav-list">
             <li>
-              <a class="nav-link" href="">Studio</a>
+              <a class="nav-link" href="#our-studio">Studio</a>
             </li>
             <li>
-              <a class="nav-link" href="">Portfolio</a>
+              <a class="nav-link" href="#our-portfolio">Portfolio</a>
             </li>
             <li>
-              <a class="nav-link" href="">Contacts</a>
+              <a class="nav-link" href="#our-contacts">Contacts</a>
             </li>
           </ul>
         </nav>
-        <address class="address">
+        <address class="address" id="our-contacts">
           <ul class="address-list">
             <li>
               <a class="address-link" href="mailto:info@devstudio.com"
@@ -56,39 +56,39 @@
     </header>
     <main>
       <!--Section 1-->
-      <section class="section-color">
-        <div class="container">
+      <section>
+        <div class="container hero-container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="button-title" type="button">Order Service</button>
         </div>
       </section>
       <!--Section 2-->
-      <section>
+      <section class="benefits">
         <div class="container">
-          <h2>Our benefits</h2>
-          <ul>
-            <li>
+          <h2 class="visually-hidden">Our benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-list-item">
               <h3 class="benefits-title">Strategy</h3>
               <p class="text-item">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="benefits-list-item">
               <h3 class="benefits-title">Punctuality</h3>
               <p class="text-item">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="benefits-list-item">
               <h3 class="benefits-title">Diligence</h3>
               <p class="text-item">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="benefits-list-item">
               <h3 class="benefits-title">Technologies</h3>
               <p class="text-item">
                 Design practice focused on digital experiences. We bring forth a
@@ -102,7 +102,7 @@
       <section class="team-back-color">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
-          <ul>
+          <ul class="team-list">
             <li class="list-back-color">
               <img
                 src="./images/mark-guerrero.jpg"
@@ -150,7 +150,7 @@
       <section>
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
-          <ul>
+          <ul class="service-list">
             <li>
               <img
                 src="./images/Portfolio/bank-app.jpg"
