--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
       </section>
       <!-- Section 4 -->
-      <section>
+      <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="service-list">
