--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
         </div>
       </section>
     </main>
-    <footer class="footer-back-color">
-      <div class="container">
+    <footer>
+      <div class="container footer-back-color">
         <a class="logo" href="./index.html"
           >Web<span class="footer-logo-part">Studio</span></a
         >
