--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
     </header>
     <main>
       <!--Section 1-->
-      <section>
+      <section class="section">
         <div class="container hero-container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="button-title" type="button">Order Service</button>
         </div>
       </section>
       <!--Section 2-->
-      <section class="benefits">
+      <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Our benefits</h2>
           <ul class="benefits-list">
@@ -99,7 +99,7 @@
         </div>
       </section>
       <!--Section 3-->
-      <section class="team-back-color">
+      <section class="section">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -147,7 +147,7 @@
         </div>
       </section>
       <!-- Section 4 -->
-      <section class="portfolio">
+      <section class="section">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="service-list">
