--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-prof">Product Designer</p>
+              <div class="team-name-container">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-prof">Product Designer</p>
+              </div>
             </li>
             <li class="list-back-color">
               <img
@@ -120,8 +122,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-prof">Frontend Developer</p>
+              <div class="team-name-container">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-prof">Frontend Developer</p>
+              </div>
             </li>
             <li class="list-back-color">
               <img
@@ -130,8 +134,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-prof">Marketing</p>
+              <div class="team-name-container">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-prof">Marketing</p>
+              </div>
             </li>
             <li class="list-back-color">
               <img
@@ -140,8 +146,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-prof">UI Designer</p>
+              <div class="team-name-container">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-prof">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -158,8 +166,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="service-title">Banking App</h3>
-              <p class="service-item">App</p>
+              <div class="portfolio-container">
+                <h3 class="service-title">Banking App</h3>
+                <p class="service-item">App</p>
+              </div>
             </li>
             <li>
               <img
@@ -168,8 +178,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="service-title">Cashless Payment</h3>
-              <p class="service-item">Marketing</p>
+              <div class="portfolio-container">
+                <h3 class="service-title">Cashless Payment</h3>
+                <p class="service-item">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -178,8 +190,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="service-title">Meditation App</h3>
-              <p class="service-item">App</p>
+              <div class="portfolio-container">
+                <h3 class="service-title">Meditation App</h3>
+                <p class="service-item">App</p>
+              </div>
             </li>
             <li>
               <img
@@ -188,8 +202,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="service-title">Taxi Service</h3>
-              <p class="service-item">Marketing</p>
+              <div class="portfolio-container">
+                <h3 class="service-title">Taxi Service</h3>
+                <p class="service-item">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -198,8 +214,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="service-title">Screen Illustrations</h3>
-              <p class="service-item">Design</p>
+              <div class="portfolio-container">
+                <h3 class="service-title">Screen Illustrations</h3>
+                <p class="service-item">Design</p>
+              </div>
             </li>
             <li>
               <img
@@ -208,15 +226,17 @@
                 width="360"
                 height="300"
               />
-              <h3 class="service-title">Online Courses</h3>
-              <p class="service-item">Marketing</p>
+              <div class="portfolio-container">
+                <h3 class="service-title">Online Courses</h3>
+                <p class="service-item">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer>
-      <div class="container footer-back-color">
+    <footer class="footer-back-color">
+      <div class="container">
         <a class="logo" href="./index.html"
           >Web<span class="footer-logo-part">Studio</span></a
         >
