--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="service-list">
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/Portfolio/bank-app.jpg"
                 alt="Banking App"
@@ -171,7 +171,7 @@
                 <p class="service-item">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/Portfolio/cashless-payment.jpg"
                 alt="Cashless Payment"
@@ -183,7 +183,7 @@
                 <p class="service-item">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/Portfolio/meditation-app.jpg"
                 alt="Meditation App"
@@ -195,7 +195,7 @@
                 <p class="service-item">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/Portfolio/taxi-service.jpg"
                 alt="Taxi Service"
@@ -207,7 +207,7 @@
                 <p class="service-item">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/Portfolio/screen-illustrations.jpg"
                 alt="Screen Illustrations"
@@ -219,7 +219,7 @@
                 <p class="service-item">Design</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/Portfolio/online-courses.jpg"
                 alt="Online Courses"
