--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     </header>
     <main>
       <!--Section 1-->
-      <section class="section">
-        <div class="container hero-container">
+      <section class="section hero-container">
+        <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="button-title" type="button">Order Service</button>
         </div>
