--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
       </section>
       <!--Section 3-->
-      <section class="section">
+      <section class="section section-back-color">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
