--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     </main>
     <footer class="footer-back-color">
       <div class="container">
-        <a class="logo" href="./index.html"
+        <a class="footer-logo" href="./index.html"
           >Web<span class="footer-logo-part">Studio</span></a
         >
         <p class="footer-text">
